--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
 body{
 
-    background-color: white;
+    background-color: #4C5B61;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: black;
+    color: #C5C5C5;
 }
 
 nav{
-    background-color: 333;
+    background-color: #C5C5C5;
     text-align: left;
     color: black;
+}
+
+.about{
+    font-size: 1em;
+    width: calc(100% - 6em);
+    background: #738290;
+    background: #829191;
+    color:#2C423F;
+    box-shadow: 0 3px 6px 2px black;
+    margin: 2em auto;
+    padding: 1em;
+}
+
+img{
+    width: 700px; ;
 }
 
 
@@ -28,7 +43,7 @@ footer{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: black;
+    background-color: #2C423F;
 }
 
 .footer .icon{
